--- a/projects/ifo/package.json
+++ b/projects/ifo/package.json
@@ -11,9 +11,17 @@
     "test:size-contracts": "npx hardhat size-contracts"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-truffle5": "^2.0.7",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "bsc-library": "1.0.0",
+    "dotenv": "^16.3.1",
+    "hardhat-abi-exporter": "^2.10.1",
+    "hardhat-contract-sizer": "^2.10.0",
+    "pancake-cake-vault": "1.0.0",
     "profile-nft-gamification": "2.0.0",
-    "pancake-cake-vault": "1.0.0"
+    "solidity-coverage": "^0.8.5"
   },
   "devDependencies": {
     "@openzeppelin/contracts": "^3.2.0"
